// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/components/input/select <Input /> With additional props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
/>
`;

exports[`shinkansen-cogs/components/input/select <Input /> With required props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  name="MOCK NAME"
/>
`;
